--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <h2 class="fade-in">Hi there, I'm Gurappa Gopi</h2>
       <p class="fade-in delay">Software Development Engineer | Big Data | Machine Learning |Artficial Intelligence| Content Creator</p>
     </div>
-    <img src="/images/pic.jpg" alt="Gurappa G" class="hero-image">
+    <img src="/pic.jpg" alt="Gurappa G" class="hero-image">
     </div>
 </div>
 
@@ -57,24 +57,24 @@
   <li>
     <span class="label">Front End:</span>
     <span class="icons">
-      <img src="/images/html.png" alt="HTML">
-      <img src="/images/CSS_logo_PNG1.png" alt="CSS">
+      <img src="/html.png" alt="HTML">
+      <img src="/CSS_logo_PNG1.png" alt="CSS">
     </span>
   </li>
   <li>
 
     <span class="label">Back End:</span>
     <span class="icons">
-      <img src="/images/Java_logo_PNG1.png" alt="JAVA">
-      <img src="/images/c.png" alt="C PROGRAMMING">
-      <img src="/images/python.png" alt="PYTHON">
+      <img src="/Java_logo_PNG1.png" alt="JAVA">
+      <img src="/c.png" alt="C PROGRAMMING">
+      <img src="/python.png" alt="PYTHON">
     </span>
   </li>
   <li>
 
     <span class="label">Databases:</span>
     <span class="icons">
-      <img src="/images/MySQL_logo_PNG1.png" alt="MYSQL">
+      <img src="/MySQL_logo_PNG1.png" alt="MYSQL">
     </span>
   </li>
 </ul>
